# semantic-spatio-temporal-mapping

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  entrypoint.sh
config/: default.yaml  evaluation_IoU.yaml  evaluation_centers2d.yaml  evaluation_image_matches.yaml
cpp/st_mapping/: CMakeLists.txt
cpp/st_mapping/core/: Deformation.hpp  GlobalMap.cpp  GlobalMap.hpp  Mapping.cpp
evaluation/: launch_reproducibility_evaluation.sh
python/: CMakeLists.txt  pyproject.toml
python/st_mapping/: odometry.py  semantic_mapping_onref_pipeline.py  semantic_mapping_pipeline.py  semantic_segmenter.py
python/st_mapping/core/: global_map.py
python/st_mapping/datasets/: generic.py  tum.py
python/st_mapping/scripts/: semantic_mapping.py  semantic_mapping_onref.py
python/st_mapping/tools/: __init__.py  evaluation_tools.py  visualization_tools.py  visualizer.py
